# observr

./: .coderabbit.yaml  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.ko.md  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  pr-automation.yml  publish-node.yml  publish-py.yml  release-on-merge.yml  release.yml
Formula/: observr.rb
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  types.ts
dashboard/src/components/: CausalTable.tsx  EventDetail.tsx  EventTable.tsx  FilterBar.tsx  LevelBadge.tsx  MetricCard.tsx  PatternCard.tsx  PatternTable.tsx  StatusDot.tsx  TracePanel.tsx
dashboard/src/hooks/: useCausalCorrelations.ts  useEventStream.ts  usePatterns.ts  useTraceEvents.ts
dashboard/src/styles/: global.css
docs/: architecture.md
scripts/: install.sh  test_e2e.py
sdk/go/: client.go  client_test.go  go.mod  observr.go  span.go  span_test.go  traceparent.go  traceparent_test.go  transport.go  transport_test.go
sdk/node/: example-fastify.mjs  package-lock.json  package.json  tsconfig.json
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: fastapi_app.py  flask_app.py
sdk/python/observr/: __init__.py  _client.py  _logger.py  _span.py  _transport.py
sdk/python/observr/integrations/: __init__.py  django.py  fastapi.py  flask.py
sdk/python/tests/: test_agent_span.py  test_django.py  test_integration.py  test_lazy_instrument.py  test_logger.py  test_span_context.py  test_transport.py
server/: go.mod
(+42 files in other folders)
