[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "observr"
version = "0.3.1"
description = "Zero-config observability with structured output for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["observability", "tracing", "logging", "ai", "devtools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Debuggers",
]
dependencies = []  # zero required dependencies

[project.optional-dependencies]
flask = ["flask>=2.0"]
fastapi = ["fastapi>=0.110", "starlette>=0.36"]
django = ["django>=4.2"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "flask>=2.0",
    "fastapi>=0.110",
    "httpx>=0.27",
    "uvicorn>=0.29",
    "django>=4.2",
]

[project.urls]
Homepage = "https://github.com/ydking0911/observr"
Repository = "https://github.com/ydking0911/observr"
Issues = "https://github.com/ydking0911/observr/issues"

[tool.hatch.build.targets.wheel]
packages = ["observr"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
